# lisa-ai-backend

./: .gitignore  Inference Pipeline.ipynb  Recording.m4a  Summarizer.ipynb  Transcript Search.ipynb  Whisper.ipynb  inference.py  pyproject.toml  readme.md  server.py  utils.py
lisa/: __init__.py  inference.py  llm_utils.py  main.py  random_uid.py  vector_store.py
scratchpad/: Inference Pipeline.ipynb  Whisper.ipynb
